- concluido primeira fase de autenticação.